# src/models/OrderItem.ts
@@ -1,0 +1,6 @@
+type OrderItem = {
+    orderId: String,
+    inventoryId: String,
+    quantity: Date
+};
+export default OrderItem;
